force-app/main/default/objects/Corporate_Seminar__c/Corporate_Seminar__c.object-meta.xml
<CustomObject>
    <label>Corporate Seminar</label>
    <nameField>
        <label>Topic</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corporate Seminars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>