force-app/main/default/objects/Corporate_Seminar__c/fields/End_date_and_time__c.field-meta.xml
<CustomField>
    <fullName>End_date_and_time__c</fullName>
    <label>End date and time</label>
    <type>DateTime</type>
</CustomField>