force-app/main/default/objects/Corporate_Seminar__c/fields/Image_related_to_seminar__c.field-meta.xml
<CustomField>
    <fullName>Image_related_to_seminar__c</fullName>
    <label>Image related to seminar</label>
    <length>256</length>
    <type>Html</type>
</CustomField>