force-app/main/default/objects/Corporate_Seminar__c/fields/Sent_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>Sent_For_Approval__c</fullName>
    <label>Sent For Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
                <default>true</default>
                <label>NO</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>