force-app/main/default/objects/Corporate_Seminar__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <label>Speaker</label>
    <referenceTo>Speaker__c</referenceTo>
    <relationshipLabel>Seminar with Speaker Information</relationshipLabel>
    <relationshipName>Corporate_Seminars</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>