force-app/main/default/objects/Corporate_Seminar__c/fields/Type_of_Corporate_seminar__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Corporate_seminar__c</fullName>
    <label>Type of Corporate seminar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>webinar</fullName>
            </value>
            <value>
                <fullName>workshop</fullName>
            </value>
            <value>
                <fullName>seminar</fullName>
            </value>
            <value>
                <fullName>conference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>